<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PixelatorActivity">

    <ImageView
        android:id="@+id/imageViewPixelator"
        android:layout_width="410dp"
        android:layout_height="575dp"
        android:layout_marginBottom="180dp"
        android:contentDescription="@string/ImgView_pixelator_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/divider_horizontal_dim_dark" />

    <ScrollView
        android:layout_width="415dp"
        android:layout_height="155dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPixelator">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextPixelSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/settings_pxsize_hint"
                android:autofillHints="@string/settings_pxsize_hint"
                android:inputType="number" />

            <Button
                android:id="@+id/button_draw_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn_draw_grid"
                android:text="@string/btn_draw_grid" />

            <Button
                android:id="@+id/button_pixelate_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn_preview_pixelate"
                android:text="@string/btn_pixelate_preview" />
            <!--    Set picked color to this view-->
            <View
                android:id="@+id/ColorView"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <!--    HEX RGB-->
            <TextView
                android:id="@+id/ColorPicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hex_nrgb"
                android:textColor="#000"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>